force-app/main/default/objects/Platform_Events_Monitor__c/Platform_Events_Monitor__c.object-meta.xml
<CustomObject>
    <label>Platform Events Monitor</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Platform Events Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Events Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>