force-app/main/default/objects/Platform_Events_Monitor__c/fields/Account_PEs_Publish_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_PEs_Publish_Count__c</fullName>
    <label>Account PEs Publish Count (Per Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>