force-app/main/default/objects/Platform_Events_Monitor__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>