force-app/main/default/objects/Platform_Events_Monitor__c/fields/Event_Published_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Published_Time__c</fullName>
    <label>Event Published Time</label>
    <type>DateTime</type>
</CustomField>