force-app/main/default/objects/Platform_Events_Monitor__c/fields/Product_PEs_Delivery_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_PEs_Delivery_Count__c</fullName>
    <label>Product PEs Delivery Count (Per Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>