force-app/main/default/objects/Platform_Events_Monitor__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>