force-app/main/default/objects/Platform_Events_Monitor__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>