force-app/main/default/objects/Platform_Events_Monitor__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>Quiddity__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Published_Time__c</columns>
    <columns>RecordId__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <columns>User_Id__c</columns>
    <columns>User_Name__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>