force-app/main/default/objects/Platform_Events_Monitor__c/listViews/Webstore.listView-meta.xml
<ListView>
    <fullName>Webstore</fullName>
    <columns>Event_Name__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>RecordId__c</columns>
    <columns>Object_Name__c</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <columns>User_Id__c</columns>
    <columns>User_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Name__c</field>
        <operation>equals</operation>
        <value>WEBSTORE</value>
    </filters>
    <label>Webstore</label>
</ListView>